# arcanum

./: .gitignore  Cargo.toml  README.md  flake.nix
nix/devShells/: default.nix  jasonrm-elon.nix  jasonrm-hertzfeld.nix
secrets/: project.env.age  secrets.env.age
src/: main.rs
