[package]
name = "arcanum"
version = "0.5.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = { version = "0.11", features = ["armor", "ssh", "cli-common"] }
clap = { version = "4", features = ["derive", "env"] }
digest = "0.10"
dirs = "6"
edit = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
temp-file = "0.1"
toor = "0.4"
