[package]
name = "arcanum"
version = "0.7.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = { version = "0.11", features = ["armor", "ssh", "cli-common"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
edit = "0.1"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
temp-file = "0.2"
toor = "0.4"
